src/alternatives-panel.scss
:root {
    --border-color: var(--vscode-pickerGroup-border);
    --button-border-color: var(--vscode-pickerGroup-border);
    --button-background-color: var(--vscode-button-background);
    --button-background-color-hover: var(--vscode-button-hoverBackground);
    --button-background-color-active: var(--vscode-button-background);
    --button-foreground-color: var(--vscode-button-foreground);
    --error-color: var(--vscode-errorForeground);
    --panel-background-color: var(--vscode-dropdown-background);
    --panel-border-color: var(--vscode-pickerGroup-border);
    --success-color: var(--vscode-progressBar-background);
    --text-color: var(--vscode-foreground);
    --text-color-disabled: var(--vscode-foreground);
}

@import 'shared/alternatives-panel';

h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
    padding: 0;
}

a,
button,
.btn {
    cursor: pointer;
}

a:hover,
a:focus {
    text-decoration: none;
}

body {
    padding: 0;
}

input {
    background: var(--vscode-input-background);
    border: solid 1px var(--border-color);
    color: var(--vscode-input-foreground);
    font-size: $font-size-small !important;
    padding: $space-tiny $space-small;
}

pre {
    font-family: var(--vscode-editor-font-family);
    font-weight: var(--vscode-editor-font-weight);
    font-size: $font-size-large;
}

.btn {
    background: var(--button-background-color);
    border: solid 1px var(--button-border-color);
    color: var(--button-foreground-color);
    font-size: $font-size-small !important;
    padding: $space-tiny $space-small;
}

.btn:hover {
    background: var(--button-background-color-hover);
}

a.btn {
    padding-left: 0;
    padding-right: 0;
    text-align: center;
    text-decoration: none;
}

a.btn:hover {
    color: var(--button-foreground-color);
}

.alternatives-list-container {
    .alternative-row {
        &.suggestion {
            opacity: 0.5 !important;
        }
    }
}

